# projeto-boas-praticas-programacao

./: pyproject.toml  readme.md
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_draft_post_title.py
blog/templates/blog/: base.html  blog.html  home.html  sobre.html
blog/templates/blog/partials/: _footer.html  _header.html
config/: settings.py  urls.py
docs/: db.dbml
