[project]
name = "projeto-boas-praticas-programacao"
version = "0.1.0"
description = "Projeto final da disciplina de boas práticas de programação"
authors = [
    {name = "Ana Beatriz Cabral Pinto",email = "beatrizcabralp.2002@gmail.com"},
    {name = "Arthur Emanuel Souza Cassiano da Costa",email = "arthurcosta0ac@gmail.com"},
    {name = "Gabriel Teixeira de Souza",email = "g.teixeira7x@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
