[project]
name = "projeto-boas-praticas-programacao"
version = "0.1.0"
description = "Projeto final da disciplina de boas práticas de programação"
authors = [
    {name = "Ana Beatriz Cabral Pinto",email = "beatrizcabralp.2002@gmail.com"},
    {name = "Arthur Emanuel Souza Cassiano da Costa",email = "arthurcosta0ac@gmail.com"},
    {name = "Gabriel Teixeira de Souza",email = "g.teixeira7x@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 88
extend-exclude = ['manage.py', '**/migrations/**.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'